# pykirill

./: .gitignore  404.html  Dockerfile  LICENSE  LICENSE.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: code_quality.yml  documentation.yml  publish-docker-image.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  publish_docker_image.yml  release.yml  tests.yml
api/: index.html
development/: index.html
docs/: api.md  development.md  index.md  motivation.md  overview.md
documentation/: api.md  development.md  index.md  overview.md  showcase.ipynb  why.md
pykirill/: moods.py  plotting.py  transforms.py  version.py
showcase/: index.html
source/pykirill/: __init__.py  association.py  cli.py  moods.py  plotting.py  transforms.py  version.py
src/: pyproject.toml
src/pykirill/: cli.py  plotting.py  transforms.py
src/tests/: test_plotting.py  test_transforms.py
tests/: test_association.py  test_plotting.py  test_transforms.py
why/: index.html
