[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pykirill"
version = "2024.0"
requires-python = ">= 3.8"
dependencies = ["numpy", "matplotlib", "seaborn"]
authors = [{ name = "Kirill", email = "kirill@kirill.kirill" }]
maintainers = [{ name = "Kirill", email = "kirill@kirill.kirill" }]
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
classifiers = ["Programming Language :: Python :: 3.12"]
[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy", "ipython"]

[project.urls]
Homepage = "https://github.com/kirilledition/pykirill"
Repository = "https://github.com/kirilledition/pykirill"


[project.scripts]
pykirill = "pykirill:cli.main"

[tool.pytest.ini_options]
testpaths = ["tests", "pykirill"]

[tool.mypy]
files = ["pykirill", "tests"]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"
